fix: align Spring Data JPA query methods with entity fields and stabilize dev boot